--- a/.github/workflows/simple-posting-account4.yml
+++ b/.github/workflows/simple-posting-account4.yml
@@ -56,6 +56,9 @@ jobs:
           if [ -n "${SUPABASE_COOKIES_ACCOUNT4:-}" ] && [ -z "${SUPABASE_COOKIES_ACCOUNT4_PATH:-}" ]; then
             echo "SUPABASE_COOKIES_ACCOUNT4_PATH=${SUPABASE_COOKIES_ACCOUNT4}" >> "$GITHUB_ENV"
           fi
+          if [ -n "${COOKIES_ACCOUNT4_PATH:-}" ] && [ -z "${SUPABASE_COOKIES_ACCOUNT4_PATH:-}" ]; then
+            echo "SUPABASE_COOKIES_ACCOUNT4_PATH=${COOKIES_ACCOUNT4_PATH}" >> "$GITHUB_ENV"
+          fi
           for var in SUPABASE_URL SUPABASE_SERVICE_ROLE_KEY SUPABASE_BUCKET SUPABASE_POST_SCHEDULE_PATH SUPABASE_COOKIES_ACCOUNT4_PATH; do
             if [ -z "${!var:-}" ]; then
               echo "Missing required secret: $var"
