--- a/.github/workflows/karma-comment-account2.yml
+++ b/.github/workflows/karma-comment-account2.yml
@@ -1,22 +1,24 @@
-name: Engagement Replies (account1)
+name: Karma Comment (account2)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 17 * * *"  # 17:00 UTC (09:00 PT)
+    - cron: "0 2 * * *"
+    - cron: "0 10 * * *"
+    - cron: "0 18 * * *"
 
 jobs:
-  engagement-replies:
+  karma-comment:
     runs-on: ubuntu-latest
     concurrency:
-      group: engagement-replies-account1
+      group: karma-comment-account2
       cancel-in-progress: false
     env:
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
       SUPABASE_BUCKET: ${{ secrets.SUPABASE_BUCKET }}
       SUPABASE_POST_SCHEDULE_PATH: ${{ secrets.SUPABASE_POST_SCHEDULE_PATH }}
-      SUPABASE_COOKIES_ACCOUNT1_PATH: ${{ secrets.SUPABASE_COOKIES_ACCOUNT1_PATH }}
+      SUPABASE_COOKIES_ACCOUNT2_PATH: ${{ secrets.SUPABASE_COOKIES_ACCOUNT2_PATH }}
       PYTHONPATH: ${{ github.workspace }}:src:.
       SELENIUM_USE_UNDETECTED: "0"
       HTTP_PROXY: ""
@@ -49,17 +51,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Download account1 cookies from Supabase
+      - name: Download account2 cookies from Supabase
         run: |
           set -euo pipefail
           mkdir -p data
-          COOKIE_URL="${SUPABASE_URL%/}/storage/v1/object/${SUPABASE_BUCKET}/${SUPABASE_COOKIES_ACCOUNT1_PATH}"
+          COOKIE_URL="${SUPABASE_URL%/}/storage/v1/object/${SUPABASE_BUCKET}/${SUPABASE_COOKIES_ACCOUNT2_PATH}"
           curl -fsS -H "Authorization: Bearer ${SUPABASE_SERVICE_ROLE_KEY}" \
                -H "apikey: ${SUPABASE_SERVICE_ROLE_KEY}" \
-               -o data/cookies_account1.pkl \
+               -o data/cookies_account2.pkl \
                "$COOKIE_URL"
 
-      - name: Random jitter (0-180 minutes)
+      - name: Random jitter (0-120 minutes, skip on manual)
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "Manual run: skipping jitter."
@@ -67,20 +69,35 @@ jobs:
           fi
           python - <<'PY'
           import random, time
-          seconds = random.randint(0, 3 * 60 * 60)
+          seconds = random.randint(0, 120 * 60)
           print(f"Jitter sleep: {seconds//60} minutes")
           time.sleep(seconds)
           PY
 
-      - name: Run reply generator (account1)
+      - name: Load subreddit list
+        id: subs
+        run: |
+          python - <<'PY'
+          import json, pathlib
+          subs = json.loads(pathlib.Path("config/subreddits.json").read_text())
+          if isinstance(subs, dict):
+            subs = subs.get("subreddits") or subs.get("list") or []
+          subs = [s for s in subs if isinstance(s, str)]
+          print(f"SUBS={' '.join(subs)}")
+          with open("$GITHUB_OUTPUT", "a") as f:
+            f.write(f"subs={' '.join(subs)}\n")
+          PY
+
+      - name: Run karma comment (account2)
         run: |
           export CHROME_BIN="${CHROME_PATH:-/usr/bin/google-chrome}"
           export CHROMEDRIVER_PATH="${CHROMEDRIVER:-/usr/local/bin/chromedriver}"
           python scripts/engagement/reply_queue_runner.py \
-            --account account1 \
+            --account account2 \
             --role generate \
-            --count 3 \
+            --count 1 \
             --headless \
             --post \
             --use-llm \
-            --supabase-prefix "${SUPABASE_POST_SCHEDULE_PATH%/}"
+            --supabase-prefix "${SUPABASE_POST_SCHEDULE_PATH%/}" \
+            --subreddits ${{ steps.subs.outputs.subs }}
