--- a/.github/workflows/engagement-replies-account1.yml
+++ b/.github/workflows/engagement-replies-account1.yml
@@ -83,4 +83,5 @@ jobs:
             --headless \
             --post \
             --use-llm \
+            --force \
             --supabase-prefix "${SUPABASE_POST_SCHEDULE_PATH%/}"
