--- a/.github/workflows/karma-comment-account1.yml
+++ b/.github/workflows/karma-comment-account1.yml
@@ -100,5 +100,6 @@ jobs:
             --headless \
             --post \
             --use-llm \
+            --force \
             --supabase-prefix "${SUPABASE_POST_SCHEDULE_PATH%/}" \
             --subreddits ${{ steps.subs.outputs.subs }}
