--- a/.github/workflows/karma-comment-account2.yml
+++ b/.github/workflows/karma-comment-account2.yml
@@ -99,5 +99,6 @@ jobs:
             --headless \
             --post \
             --use-llm \
+            --force \
             --supabase-prefix "${SUPABASE_POST_SCHEDULE_PATH%/}" \
             --subreddits ${{ steps.subs.outputs.subs }}
